# sim_lab

./: .gitignore  .gitmodules  README.md
scripts/: install_system_deps.sh  start_sim_lab.sh  stop_sim_lab.sh
src/: README.md
src/sim_lab_bringup/: CMakeLists.txt  package.xml
src/sim_lab_bringup/config/: iris_gimbal_bridge.yaml
src/sim_lab_bringup/launch/: sim_iris_gimbal.launch.py
tmux/: sim_lab.tmuxp.yaml
